---
source: integration-tests/tests/integration/main.rs
expression: with_retries_output.stdout_as_str()
snapshot_kind: text
---
group: flaky (max threads = 4)
  * override for with-retries profile with filter 'test(test_flaky_mod) | test(~test_flaky_mod_4)':
      nextest-tests::basic:
          test_flaky_mod_4
          test_flaky_mod_6
group: serial (max threads = 1)
  * override for with-retries profile with filter 'test(=test_success) | test(=test_execute_bin)':
      nextest-tests::basic:
          test_execute_bin
          test_success
group: unused (max threads = 20)
    (no matches)
